Attempt updating adapter to localforage Fix toggle checkboxes not right-aligned on form steps

--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -35,6 +35,8 @@ $material-box
 	> .form-field-horizontal
 		+media-query($breakpointMain)
 			display flex
+			.form-field-controls
+				width inherit
 		.form-field-controls
 			float right
 	&s
